# monte-carlo-shielding

./: .gitignore  CLAUDE.md  README.md  get_include_paths.py  plan.md  pyproject.toml  requirements.txt  setup.py  test_100_particles.cpp  test_particle  test_progress_bar.cpp
.claude/: settings.local.json
cpp/data/nist_xcom/: about_elements.txt
cpp/include/: Box.hpp  Geometry.hpp  Material.hpp  MonteCarloSampling.hpp  MonteCarloUtils.hpp  Particle.hpp  ParticleSource.hpp  PhotonCrossSectionDatabase.hpp  PhotonPhysics.hpp  PhotonSimulation.hpp  ProgressBar.hpp  RandomNumberGenerator.hpp  RandomNumberQuality.hpp  SamplingDebugger.hpp  SimulationResults.hpp  Transport.hpp  Vector3D.hpp
cpp/src/: Box.cpp  Geometry.cpp  Material.cpp  MonteCarloSampling.cpp  Particle.cpp  ParticleSource.cpp  PhotonCrossSectionDatabase.cpp  PhotonPhysics.cpp  PhotonSimulation.cpp  ProgressBar.cpp  RandomNumberGenerator.cpp  RandomNumberQuality.cpp  SamplingDebugger.cpp  SimulationResults.cpp  Transport.cpp  Vector3D.cpp  hello.cpp
cpp/tests/: debug_accurate_physics.cpp  debug_coherent_scattering.cpp  debug_coherent_scattering_fix.cpp  debug_cross_section_issue.cpp  debug_pair_production.cpp  debug_photoelectric.cpp  debug_photon.cpp  debug_sampling.cpp  test_accurate_photon_physics.cpp  test_beer_lambert_validation.cpp  test_box.cpp  test_compile.cpp  test_cross_section_validation.cpp  test_day10_assessment.cpp  test_edge_cases.cpp  test_geometry.cpp  test_material.cpp  test_material_photon_integration.cpp  test_monte_carlo_sampling.cpp  test_monte_carlo_utils.cpp  test_nist_cross_sections.cpp  test_particle.cpp  test_particle_geometry_integration.cpp  test_photon_physics.cpp  test_photon_transport_integration.cpp  test_random_number_generator.cpp  test_random_number_quality.cpp  test_sampling_debugger.cpp  test_temperature_corrections.cpp  test_vector3d.cpp
